--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,7 +32,7 @@
 	<div class="container">
 		<div class="row d-flex justify-content-center section-title">
 			<div class="col-md-8 header-text">
-				<div class="lnr-hover"><span class="lnr lnr-users"></span></div>
+				<div class="lnr-hover"><span class="lnr lnr-rocket"></span></div>
 				<h2>Find global friends</h2>
 				<p>
 					In which continent are you looking for friends?
