--- a/views/view.ejs
+++ b/views/view.ejs
@@ -4,7 +4,7 @@
 	<div class="container">
 		<div class="row d-flex justify-content-center session-title">
 			<div class="col-md-8 header-text">
-				<div class="lnr-hover"><span class="lnr lnr-users"></span></div>
+				<div class="lnr-hover"><span class="lnr lnr-rocket"></span></div>
 				<h2>Trainer Code</h2>
 				<p>
 					Add below as a friend in your Pokémon GO app.
