--- a/views/search.ejs
+++ b/views/search.ejs
@@ -68,7 +68,7 @@
 	<div class="container">
 		<div id="card-wrapper" class="code-view row d-flex justify-content-center session-title">
 			<div class="col-md-8 header-text">
-				<div class="lnr-hover"><span class="lnr lnr-users"></span></div>
+				<div class="lnr-hover"><span class="lnr lnr-rocket"></span></div>
 				<h2>Find global friends</h2>
 				<p>
 					In which continent are you looking for friends?
