Add counts by continent on the map

--- a/views/search.ejs
+++ b/views/search.ejs
@@ -79,12 +79,12 @@
 		<div class="line"></div>
 		<div id="map-continents">
 			<ul class="continents">
-				<li class="c1"><a href="#AF">Africa</a></li>
-				<li class="c2"><a href="#AS">Asia</a></li>
-				<li class="c3"><a href="#OC">Australia</a></li>
-				<li class="c4"><a href="#EU">Europe</a></li>
-				<li class="c5"><a href="#NA">North America</a></li>
-				<li class="c6"><a href="#SA">South America</a></li>
+				<li class="c1"><a href="#AF" rel="nofollow">Africa</a><b class="badge badge-info"><%= continentCounts.AF %></b></li>
+				<li class="c2"><a href="#AS" rel="nofollow">Asia</a><b class="badge badge-info"><%= continentCounts.AS %></b></li>
+				<li class="c3"><a href="#OC" rel="nofollow">Australia</a><b class="badge badge-info"><%= continentCounts.OC %></b></li>
+				<li class="c4"><a href="#EU" rel="nofollow">Europe</a><b class="badge badge-info"><%= continentCounts.EU %></b></li>
+				<li class="c5"><a href="#NA" rel="nofollow">North America</a><b class="badge badge-info"><%= continentCounts.NA %></b></li>
+				<li class="c6"><a href="#SA" rel="nofollow">South America</a><b class="badge badge-info"><%= continentCounts.SA %></b></li>
 			</ul>
 		</div>
 	</div>
@@ -109,41 +109,6 @@
 		var countryListEl = $("#country-list"),
 			cardEl= $("#card-wrapper"),
 			lastSelected;
-
-		var onclick = function(e) {
-			var rLink = e.children("A").eq(0).attr("href"),
-				rText = e.children("A").eq(0).text(),
-				rClass = e.attr("class").split(" ")[0],
-				continentCode = continentCodeMap[rText];
-
-			$.ajax({
-				type: "POST",
-				url: "/code/search/continent",
-				data: {
-					continent: continentCode,
-					path: "/code/search/"
-				},
-				success: function (result) {
-					if (result.errorType == "login") {
-						alert('[ERROR] ' + result.errorMessage);
-						return window.location.href = result.siteConfig.loginUrl;
-					} else if (result.errorType) {
-						alert('[ERROR] ' + result.errorMessage);
-						return;
-					}
-
-					if (result.countries) {
-						var newHtml = _.template($('#tpl_countryList').html())(result);
-						countryListEl.html(newHtml);
-					}
-				},
-				error: function (req, status, e) {
-					alert('[ERROR] ' + e);
-				}
-			});
-
-			return;
-		};
 
 		var getCodeEvent = function(e) {
 			e.preventDefault();
@@ -317,13 +282,75 @@
 
 		$('body').on('click', '.country', resetSelectedAndGetCodeEvent);
 
+		var onclick = function(e) {
+			var rLink = e.children("A").eq(0).attr("href"),
+				rText = e.children("A").eq(0).text(),
+				rClass = e.attr("class").split(" ")[0],
+				continentCode = continentCodeMap[rText];
+
+			$.ajax({
+				type: "POST",
+				url: "/code/search/continent",
+				data: {
+					continent: continentCode,
+					path: "/code/search/"
+				},
+				success: function (result) {
+					if (result.errorType == "login") {
+						alert('[ERROR] ' + result.errorMessage);
+						return window.location.href = result.siteConfig.loginUrl;
+					} else if (result.errorType) {
+						alert('[ERROR] ' + result.errorMessage);
+						return;
+					}
+
+					if (result.countries) {
+						var newHtml = _.template($('#tpl_countryList').html())(result);
+						countryListEl.html(newHtml);
+					}
+				},
+				error: function (req, status, e) {
+					alert('[ERROR] ' + e);
+				}
+			});
+		};
+
+		var numberTag = "B",
+			setNumbers = function(region){
+				var getLink = region.getElementsByTagName("A")[0],
+					getNumber = region.getElementsByTagName(numberTag)[0],
+					leftPosition = $(getLink).position().left,
+					topPosition = $(getLink).position().top + 18,
+					numberMarginTop = Math.floor($(getNumber).outerHeight() / -2),
+					numberMarginLeft = Math.floor($(getNumber).outerWidth() / -2),
+					setPosition = {
+						"left": leftPosition + "px",
+						"marginLeft": numberMarginLeft + "px",
+						"marginTop": numberMarginTop + "px",
+						"position": "absolute",
+						"top": topPosition + "px",
+						"zIndex": 88
+					};
+
+				$(getNumber).css(setPosition);
+			};
+
+		var onload = function(e) {
+			var getItems = e.find("LI");
+			for(var i = 0, region; region = getItems[i]; i++){
+				console.log(" > " + region);
+				setNumbers(region);
+			}
+		};
+
 		$("#map-continents").CSSMap({
 			"size": 850,
 			"tooltips": "visible",
 			"responsive": "auto",
 			"tapOnce": true,
 			"cities": true,
-			"onClick": onclick
+			"onClick": onclick,
+			"onLoad": onload
 		});
 
 		var continentCode = $("#continent-holder").val();
