--- a/views/myView.ejs
+++ b/views/myView.ejs
@@ -7,6 +7,10 @@
 				<div class="lnr-hover"><span class="lnr lnr-user"></span></div>
 				<h2>My Trainer Codes</h2>
 			</div>
+
+			<div class="col-md-12 row controls justify-content-center pt-10">
+				<a href="/code/register"><button class="primary-btn2 text-uppercase">Register trainer code<span class="lnr lnr-arrow-right"></span></button></a>
+			</div>
 		</div>
 
 		<div class="row pb-20"></div>
@@ -23,9 +27,6 @@
 			<div class="line"></div>
 			<div>You didn't share your code yet. Please register your trainer code.</div>
 			<div class="line"></div>
-			<div class="row controls justify-content-center">
-				<a href="/code/register"><button class="primary-btn2 text-uppercase">Share trainer code<span class="lnr lnr-arrow-right"></span></button></a>
-			</div>
 		</div>
 		<% } else { %>
 		<% codes.forEach(function(code) { %>
