Remove continent count badge

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -64,7 +64,7 @@
 			var rLink = e.children("A").eq(0).attr("href"),
 				rText = e.children("A").eq(0).text(),
 				rClass = e.attr("class").split(" ")[0],
-				continentCode = continentCodeMap[rText];
+				continentCode = continentClassMap[rClass];
 		};
 
 		$("#map-continents").CSSMap({
