--- a/views/myView.ejs
+++ b/views/myView.ejs
@@ -58,8 +58,8 @@
 				<div class="row controls">
 					<div class="col-6 like">
 						<a><span class="lnr lnr-thumbs-up"></span><span class="like-val"><%= code.like %></span></a>
-						<span class="pr-1"></span>
-						<a><span class="lnr lnr-thumbs-down"></span><span class="dislike-val"><%= code.dislike %></span></a>
+						<!--<span class="pr-1"></span>-->
+						<!--<a><span class="lnr lnr-thumbs-down"></span><span class="dislike-val"><%= code.dislike %></span></a>-->
 					</div>
 					<div class="another col-6">
 						<a href="/code/update/<%= code.id %>" class="modify-btn"><span class="lnr lnr-cog"></span>FIX</a>&nbsp;
