Adjust continent tooltip style

--- a/views/search.ejs
+++ b/views/search.ejs
@@ -80,12 +80,12 @@
 <section class="continent mb-30">
 	<div id="map-continents">
 		<ul class="continents">
-			<li class="c1"><a href="#AF" rel="nofollow">Africa (<%= continentCounts.AF %>)</a></li>
-			<li class="c2"><a href="#AS" rel="nofollow">Asia (<%= continentCounts.AS %>)</a></li>
-			<li class="c3"><a href="#OC" rel="nofollow">Australia (<%= continentCounts.OC %>)</a></li>
-			<li class="c4"><a href="#EU" rel="nofollow">Europe (<%= continentCounts.EU %>)</a></li>
-			<li class="c5"><a href="#NA" rel="nofollow">North America (<%= continentCounts.NA %>)</a></li>
-			<li class="c6"><a href="#SA" rel="nofollow">South America (<%= continentCounts.SA %>)</a></li>
+			<li class="c1"><a href="#AF" rel="nofollow">Africa <i><%= continentCounts.AF %></i></a></li>
+			<li class="c2"><a href="#AS" rel="nofollow">Asia <i><%= continentCounts.AS %></i></a></li>
+			<li class="c3"><a href="#OC" rel="nofollow">Australia <i><%= continentCounts.OC %></i></a></li>
+			<li class="c4"><a href="#EU" rel="nofollow">Europe <i><%= continentCounts.EU %></i></a></li>
+			<li class="c5"><a href="#NA" rel="nofollow">North America <i><%= continentCounts.NA %></i></a></li>
+			<li class="c6"><a href="#SA" rel="nofollow">South America <i><%= continentCounts.SA %></i></a></li>
 		</ul>
 	</div>
 	<div class="row country-list justify-content-center" id="country-list">
