--- a/public/scss/theme/_home.scss
+++ b/public/scss/theme/_home.scss
@@ -2,6 +2,12 @@ a, a:hover {
   color:$primary-color;
 }
 
+ul.continents {
+  a {
+	padding: 2px 5px;
+  }
+}
+
 .section-gap {
   padding: 80px 0;
 }
